--- a/Depo/Depo/Presentation/UserStories/Settings/ConnectedAccounts/Cells/DropboxAccountConnectionCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ConnectedAccounts/Cells/DropboxAccountConnectionCell.xib
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="TurkcellSaturaDem.ttf">
-            <string>TurkcellSaturaDem</string>
-        </array>
         <array key="TurkcellSaturaReg.ttf">
             <string>TurkcellSaturaReg</string>
         </array>
@@ -22,96 +20,92 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DropboxAccountConnectionCell" id="KGk-i7-Jjw" customClass="DropboxAccountConnectionCell" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="124"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DropboxAccountConnectionCell" rowHeight="126" id="KGk-i7-Jjw" customClass="DropboxAccountConnectionCell" customModule="Billo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="113"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="124"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="113"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Dropbox" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uTd-G6-VJJ">
-                        <rect key="frame" x="16" y="20" width="288" height="18"/>
-                        <fontDescription key="fontDescription" name="TurkcellSaturaDem" family="TurkcellSaturaDem" pointSize="18"/>
-                        <color key="textColor" name="darkText"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" ambiguous="YES" image="dropbox" translatesAutoresizingMaskIntoConstraints="NO" id="ZOM-Bi-dfz">
-                        <rect key="frame" x="16" y="54" width="38" height="38"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oLa-uL-ksx">
+                        <rect key="frame" x="8" y="8" width="304" height="81"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" image="dropbox" translatesAutoresizingMaskIntoConstraints="NO" id="ZOM-Bi-dfz">
+                                <rect key="frame" x="12" y="26" width="22" height="30"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Import From Dropbox" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIi-t2-lfG">
+                                <rect key="frame" x="46" y="30" width="174.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="IuT-Yp-xJz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
+                                <color key="textColor" name="darkText"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hnf-mh-3oA">
+                                <rect key="frame" x="271" y="28" width="25" height="26"/>
+                                <state key="normal" image="iconImport"/>
+                                <connections>
+                                    <action selector="importToDropbox:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="6LD-8y-1P9"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress: 100500/100500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zwt-gE-Uac">
+                                <rect key="frame" x="42" y="53" width="130" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="AiX-Hr-ZEs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="ZOM-Bi-dfz" secondAttribute="height" multiplier="1:1" id="5l2-7d-vc7"/>
-                            <constraint firstAttribute="height" constant="38" id="UzA-qQ-2Vx"/>
+                            <constraint firstAttribute="bottom" secondItem="YIi-t2-lfG" secondAttribute="bottom" constant="30" id="CmV-EJ-LgA"/>
+                            <constraint firstItem="ZOM-Bi-dfz" firstAttribute="top" secondItem="oLa-uL-ksx" secondAttribute="top" constant="26" id="FcY-Lx-s67"/>
+                            <constraint firstItem="Hnf-mh-3oA" firstAttribute="top" secondItem="oLa-uL-ksx" secondAttribute="top" constant="28" id="KoT-dc-Vly"/>
+                            <constraint firstAttribute="trailing" secondItem="Hnf-mh-3oA" secondAttribute="trailing" constant="8" id="Psh-oD-fHx"/>
+                            <constraint firstItem="ZOM-Bi-dfz" firstAttribute="leading" secondItem="oLa-uL-ksx" secondAttribute="leading" constant="12" id="U87-Pp-gBb"/>
+                            <constraint firstItem="YIi-t2-lfG" firstAttribute="leading" secondItem="ZOM-Bi-dfz" secondAttribute="trailing" constant="12" id="ZPb-KQ-5Nf"/>
+                            <constraint firstAttribute="bottom" secondItem="ZOM-Bi-dfz" secondAttribute="bottom" constant="25" id="hev-yT-iha"/>
+                            <constraint firstItem="zwt-gE-Uac" firstAttribute="leading" secondItem="ZOM-Bi-dfz" secondAttribute="trailing" constant="8" symbolic="YES" id="iYP-fl-cfy"/>
+                            <constraint firstItem="YIi-t2-lfG" firstAttribute="top" secondItem="oLa-uL-ksx" secondAttribute="top" constant="30" id="knR-cl-7XN"/>
+                            <constraint firstAttribute="bottom" secondItem="Hnf-mh-3oA" secondAttribute="bottom" constant="27" id="s0C-gV-trv"/>
+                            <constraint firstItem="zwt-gE-Uac" firstAttribute="top" secondItem="YIi-t2-lfG" secondAttribute="bottom" constant="2" id="xMZ-aY-PvG"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Import From Dropbox" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIi-t2-lfG">
-                        <rect key="frame" x="76" y="63.5" width="182" height="19"/>
-                        <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
-                        <color key="textColor" name="darkText"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Progress: 100500/100500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zwt-gE-Uac">
-                        <rect key="frame" x="76" y="83.5" width="130" height="16"/>
-                        <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="14"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="dropbox_progress" translatesAutoresizingMaskIntoConstraints="NO" id="Rhr-v0-f3c" customClass="RotatingImageView" customModule="Billo" customModuleProvider="target">
-                        <rect key="frame" x="262" y="52" width="42" height="42"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="Rhr-v0-f3c" secondAttribute="height" multiplier="1:1" id="bTa-tU-Bfa"/>
-                        </constraints>
-                    </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hnf-mh-3oA">
-                        <rect key="frame" x="262.5" y="53.5" width="41" height="41"/>
-                        <state key="normal" image="dropbox_button"/>
-                        <connections>
-                            <action selector="importToDropbox:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="6LD-8y-1P9"/>
-                        </connections>
-                    </button>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" name="primaryBackground"/>
                 <constraints>
-                    <constraint firstItem="YIi-t2-lfG" firstAttribute="leading" secondItem="ZOM-Bi-dfz" secondAttribute="trailing" constant="22" id="84l-td-Ggt"/>
-                    <constraint firstItem="Hnf-mh-3oA" firstAttribute="centerY" secondItem="Rhr-v0-f3c" secondAttribute="centerY" constant="1" id="BDz-2v-vmf"/>
-                    <constraint firstItem="ZOM-Bi-dfz" firstAttribute="top" secondItem="uTd-G6-VJJ" secondAttribute="bottom" constant="16" id="CtU-b4-iK5"/>
-                    <constraint firstItem="Rhr-v0-f3c" firstAttribute="centerY" secondItem="YIi-t2-lfG" secondAttribute="centerY" id="Dgo-WE-8eB"/>
-                    <constraint firstAttribute="bottom" secondItem="zwt-gE-Uac" secondAttribute="bottom" constant="24.5" id="Dxo-67-GkF"/>
-                    <constraint firstItem="zwt-gE-Uac" firstAttribute="top" secondItem="YIi-t2-lfG" secondAttribute="bottom" constant="1" id="GFa-ve-O6p"/>
-                    <constraint firstItem="zwt-gE-Uac" firstAttribute="leading" secondItem="YIi-t2-lfG" secondAttribute="leading" id="Jcw-iD-fpj"/>
-                    <constraint firstAttribute="trailing" secondItem="Rhr-v0-f3c" secondAttribute="trailing" constant="16" id="Jn7-1P-rbq"/>
-                    <constraint firstItem="Hnf-mh-3oA" firstAttribute="height" secondItem="Rhr-v0-f3c" secondAttribute="height" constant="-1" id="Jtm-4R-gL1"/>
-                    <constraint firstItem="uTd-G6-VJJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="LGr-dy-dv0"/>
-                    <constraint firstAttribute="trailing" secondItem="uTd-G6-VJJ" secondAttribute="trailing" constant="16" id="Wch-QD-UhJ"/>
-                    <constraint firstItem="uTd-G6-VJJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="Y4t-l1-SV8"/>
-                    <constraint firstItem="ZOM-Bi-dfz" firstAttribute="leading" secondItem="uTd-G6-VJJ" secondAttribute="leading" id="aOv-nU-Ba6"/>
-                    <constraint firstItem="Hnf-mh-3oA" firstAttribute="width" secondItem="Rhr-v0-f3c" secondAttribute="width" constant="-1" id="b5C-Ob-tfF"/>
-                    <constraint firstItem="YIi-t2-lfG" firstAttribute="centerY" secondItem="ZOM-Bi-dfz" secondAttribute="centerY" id="dd9-GX-TkC"/>
-                    <constraint firstItem="Rhr-v0-f3c" firstAttribute="leading" secondItem="YIi-t2-lfG" secondAttribute="trailing" constant="4" id="pBK-fZ-d81"/>
-                    <constraint firstItem="Hnf-mh-3oA" firstAttribute="centerX" secondItem="Rhr-v0-f3c" secondAttribute="centerX" id="sQJ-Nw-bDr"/>
-                    <constraint firstItem="Rhr-v0-f3c" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="zwt-gE-Uac" secondAttribute="trailing" constant="8" id="yhL-rB-ls1"/>
+                    <constraint firstAttribute="trailing" secondItem="oLa-uL-ksx" secondAttribute="trailing" constant="8" id="8CY-yM-E0K"/>
+                    <constraint firstAttribute="bottom" secondItem="oLa-uL-ksx" secondAttribute="bottom" constant="8" id="Mnv-fd-WeS"/>
+                    <constraint firstItem="oLa-uL-ksx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Psj-Hs-GS1"/>
+                    <constraint firstItem="oLa-uL-ksx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="mon-U0-7No"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <connections>
-                <outlet property="caption" destination="uTd-G6-VJJ" id="0Fg-fy-ZJ7"/>
+                <outlet property="bgView" destination="oLa-uL-ksx" id="a8i-9r-LqH"/>
                 <outlet property="customText" destination="YIi-t2-lfG" id="5WS-rW-HYg"/>
                 <outlet property="icon" destination="ZOM-Bi-dfz" id="gw9-de-F0m"/>
                 <outlet property="importButton" destination="Hnf-mh-3oA" id="xAq-4D-uh3"/>
                 <outlet property="progress" destination="zwt-gE-Uac" id="x8G-ht-pld"/>
-                <outlet property="rotatingImage" destination="Rhr-v0-f3c" id="LSp-iT-DaN"/>
             </connections>
-            <point key="canvasLocation" x="137.59999999999999" y="153.82308845577214"/>
+            <point key="canvasLocation" x="137.59999999999999" y="134.48275862068968"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="dropbox" width="22" height="20"/>
-        <image name="dropbox_button" width="32" height="32"/>
-        <image name="dropbox_progress" width="42" height="42"/>
+        <image name="iconImport" width="25" height="26"/>
         <namedColor name="darkText">
             <color red="0.30199998617172241" green="0.30199998617172241" blue="0.30199998617172241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
