--- a/Depo/Depo/Presentation/UserStories/Settings/ConnectedAccounts/Cells/FacebookAccountConnectionCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ConnectedAccounts/Cells/FacebookAccountConnectionCell.xib
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="TurkcellSaturaDem.ttf">
-            <string>TurkcellSaturaDem</string>
-        </array>
         <array key="Turkcell_Satura_Regular.ttf">
             <string>TurkcellSatura</string>
         </array>
@@ -19,62 +17,66 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FacebookAccountConnectionCell" rowHeight="93" id="KGk-i7-Jjw" customClass="FacebookAccountConnectionCell" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="124"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FacebookAccountConnectionCell" rowHeight="66" id="KGk-i7-Jjw" customClass="FacebookAccountConnectionCell" customModule="Billo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="124"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Facebook" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSu-ci-sFx">
-                        <rect key="frame" x="16" y="20" width="272" height="29.5"/>
-                        <fontDescription key="fontDescription" name="TurkcellSaturaDem" family="TurkcellSaturaDem" pointSize="18"/>
-                        <color key="textColor" name="darkText"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" image="facebook" translatesAutoresizingMaskIntoConstraints="NO" id="A4G-xm-h6E">
-                        <rect key="frame" x="16" y="65.5" width="26.5" height="26.5"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cT1-zn-1qy">
+                        <rect key="frame" x="8" y="8" width="304" height="81"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" image="facebook" translatesAutoresizingMaskIntoConstraints="NO" id="A4G-xm-h6E">
+                                <rect key="frame" x="12" y="29" width="10" height="22"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Import From Facebook" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zfq-HD-DMG">
+                                <rect key="frame" x="34" y="30" width="184.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="184.5" id="lG0-rc-P9G"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
+                                <color key="textColor" name="darkText"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mv2-dO-dk3">
+                                <rect key="frame" x="243" y="25" width="51" height="31"/>
+                                <connections>
+                                    <action selector="importSwitchValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="c2U-Sg-NN7"/>
+                                </connections>
+                            </switch>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="A4G-xm-h6E" secondAttribute="height" multiplier="1:1" id="BCi-7T-j0q"/>
+                            <constraint firstAttribute="bottom" secondItem="Zfq-HD-DMG" secondAttribute="bottom" constant="30" id="NPe-zu-ihV"/>
+                            <constraint firstAttribute="trailing" secondItem="mv2-dO-dk3" secondAttribute="trailing" constant="12" id="dew-dy-vA4"/>
+                            <constraint firstAttribute="bottom" secondItem="mv2-dO-dk3" secondAttribute="bottom" constant="25" id="hzy-Yc-jsh"/>
+                            <constraint firstItem="Zfq-HD-DMG" firstAttribute="top" secondItem="cT1-zn-1qy" secondAttribute="top" constant="30" id="i2l-tU-ymn"/>
+                            <constraint firstItem="mv2-dO-dk3" firstAttribute="top" secondItem="cT1-zn-1qy" secondAttribute="top" constant="25" id="ice-A0-Ss5"/>
+                            <constraint firstAttribute="bottom" secondItem="A4G-xm-h6E" secondAttribute="bottom" constant="30" id="j7X-rn-iER"/>
+                            <constraint firstItem="A4G-xm-h6E" firstAttribute="leading" secondItem="cT1-zn-1qy" secondAttribute="leading" constant="12" id="mxk-eS-paZ"/>
+                            <constraint firstItem="Zfq-HD-DMG" firstAttribute="leading" secondItem="A4G-xm-h6E" secondAttribute="trailing" constant="12" id="ulX-I5-nVu"/>
+                            <constraint firstItem="A4G-xm-h6E" firstAttribute="top" secondItem="cT1-zn-1qy" secondAttribute="top" constant="29" id="zrk-g4-AJe"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Import From Facebook" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zfq-HD-DMG">
-                        <rect key="frame" x="64.5" y="68.5" width="184.5" height="21"/>
-                        <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
-                        <color key="textColor" name="darkText"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mv2-dO-dk3">
-                        <rect key="frame" x="253" y="63.5" width="51" height="31"/>
-                        <connections>
-                            <action selector="importSwitchValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="c2U-Sg-NN7"/>
-                        </connections>
-                    </switch>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" name="primaryBackground"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="mv2-dO-dk3" secondAttribute="trailing" constant="18" id="94E-Zc-ZS5"/>
-                    <constraint firstItem="A4G-xm-h6E" firstAttribute="top" secondItem="KSu-ci-sFx" secondAttribute="bottom" constant="16" id="Azy-BP-feh"/>
-                    <constraint firstItem="Zfq-HD-DMG" firstAttribute="centerY" secondItem="A4G-xm-h6E" secondAttribute="centerY" id="GvG-N0-7NS"/>
-                    <constraint firstItem="KSu-ci-sFx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="J5R-Eu-QVG"/>
-                    <constraint firstAttribute="bottom" secondItem="A4G-xm-h6E" secondAttribute="bottom" constant="32" id="JGh-jx-Vup"/>
-                    <constraint firstItem="A4G-xm-h6E" firstAttribute="leading" secondItem="KSu-ci-sFx" secondAttribute="leading" id="NgQ-Hd-YGt"/>
-                    <constraint firstItem="Zfq-HD-DMG" firstAttribute="leading" secondItem="A4G-xm-h6E" secondAttribute="trailing" constant="22" id="U8v-OW-2Rj"/>
-                    <constraint firstItem="KSu-ci-sFx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="YhI-sH-z4l"/>
-                    <constraint firstItem="mv2-dO-dk3" firstAttribute="leading" secondItem="Zfq-HD-DMG" secondAttribute="trailing" constant="4" id="d6e-ml-ESA"/>
-                    <constraint firstItem="mv2-dO-dk3" firstAttribute="centerY" secondItem="Zfq-HD-DMG" secondAttribute="centerY" id="dcY-oU-mCu"/>
-                    <constraint firstAttribute="trailing" secondItem="KSu-ci-sFx" secondAttribute="trailing" constant="32" id="nBc-GG-PsT"/>
+                    <constraint firstItem="cT1-zn-1qy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="KdZ-VD-0pa"/>
+                    <constraint firstItem="cT1-zn-1qy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="aw9-ob-MTa"/>
+                    <constraint firstAttribute="bottom" secondItem="cT1-zn-1qy" secondAttribute="bottom" constant="8" id="nmE-oi-4Tw"/>
+                    <constraint firstAttribute="trailing" secondItem="cT1-zn-1qy" secondAttribute="trailing" constant="8" id="odi-hT-x52"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <connections>
-                <outlet property="caption" destination="KSu-ci-sFx" id="lgC-Xb-xio"/>
+                <outlet property="bgView" destination="cT1-zn-1qy" id="M7G-bR-dvk"/>
                 <outlet property="customText" destination="Zfq-HD-DMG" id="zXa-aa-Te9"/>
                 <outlet property="icon" destination="A4G-xm-h6E" id="dt8-0e-Zbv"/>
                 <outlet property="importSwitch" destination="mv2-dO-dk3" id="BXP-Ad-gEe"/>
             </connections>
-            <point key="canvasLocation" x="139.19999999999999" y="175.41229385307346"/>
+            <point key="canvasLocation" x="139.19999999999999" y="163.26836581709148"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -85,5 +87,8 @@
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
