--- a/Depo/Depo/Presentation/UserStories/Others/InstaPickSelection/PhotoSelectionNoFilesView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/InstaPickSelection/PhotoSelectionNoFilesView.xib
@@ -15,24 +15,27 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="iRb-ER-skE">
-                    <rect key="frame" x="16" y="325" width="343" height="17"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There are no photos" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rFU-4A-2t6">
-                            <rect key="frame" x="0.0" y="0.0" width="343" height="17"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                </stackView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="popupNoMemories" translatesAutoresizingMaskIntoConstraints="NO" id="Tdc-Pf-T4x">
+                    <rect key="frame" x="131.5" y="217.5" width="112" height="112"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="112" id="leX-rf-3ED"/>
+                        <constraint firstAttribute="width" constant="112" id="xNI-YZ-7KS"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There are no photos" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rFU-4A-2t6">
+                    <rect key="frame" x="122.5" y="369.5" width="130.5" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="8fc-Z3-t2g"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="iRb-ER-skE" firstAttribute="leading" secondItem="8fc-Z3-t2g" secondAttribute="leading" constant="16" id="NnC-lH-o3g"/>
-                <constraint firstItem="8fc-Z3-t2g" firstAttribute="trailing" secondItem="iRb-ER-skE" secondAttribute="trailing" constant="16" id="OwO-im-djk"/>
-                <constraint firstItem="iRb-ER-skE" firstAttribute="centerY" secondItem="6kT-Hw-2h9" secondAttribute="centerY" id="bDX-Af-yzi"/>
+                <constraint firstItem="rFU-4A-2t6" firstAttribute="top" secondItem="Tdc-Pf-T4x" secondAttribute="bottom" constant="40" id="7lu-Vn-dxG"/>
+                <constraint firstItem="Tdc-Pf-T4x" firstAttribute="centerX" secondItem="8fc-Z3-t2g" secondAttribute="centerX" id="JsT-H4-RxI"/>
+                <constraint firstItem="rFU-4A-2t6" firstAttribute="centerX" secondItem="8fc-Z3-t2g" secondAttribute="centerX" id="TtT-iL-PcZ"/>
+                <constraint firstItem="Tdc-Pf-T4x" firstAttribute="centerY" secondItem="8fc-Z3-t2g" secondAttribute="centerY" constant="-60" id="dfa-hS-eKp"/>
             </constraints>
             <connections>
                 <outlet property="noPhotosLabel" destination="rFU-4A-2t6" id="gkX-0i-KOm"/>
@@ -41,6 +44,7 @@
         </view>
     </objects>
     <resources>
+        <image name="popupNoMemories" width="150" height="150"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
