--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/View/View/ContactsBackupHistoryView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/View/View/ContactsBackupHistoryView.xib
@@ -24,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zZb-K9-hPU">
-                    <rect key="frame" x="0.0" y="44" width="414" height="92"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="64"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconBackupCheck" translatesAutoresizingMaskIntoConstraints="NO" id="7QK-Jx-lcW">
                             <rect key="frame" x="16" y="20" width="33" height="24"/>
@@ -34,24 +34,24 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your latest backup" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAP-yf-ibi">
-                            <rect key="frame" x="16" y="52" width="382" height="20"/>
+                            <rect key="frame" x="57" y="22" width="349" height="20"/>
                             <fontDescription key="fontDescription" name="TurkcellSaturaMed" family="TurkcellSaturaMed" pointSize="20"/>
                             <color key="textColor" name="lrBrownishGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" name="toolbarTintColor"/>
+                    <color key="backgroundColor" name="background"/>
                     <constraints>
-                        <constraint firstItem="eAP-yf-ibi" firstAttribute="top" secondItem="7QK-Jx-lcW" secondAttribute="bottom" constant="8" id="Cz9-WE-DZr"/>
-                        <constraint firstAttribute="trailing" secondItem="eAP-yf-ibi" secondAttribute="trailing" constant="16" id="Fdi-Hh-AyB"/>
+                        <constraint firstAttribute="trailing" secondItem="eAP-yf-ibi" secondAttribute="trailing" constant="8" id="EJz-De-RHN"/>
                         <constraint firstItem="7QK-Jx-lcW" firstAttribute="top" secondItem="zZb-K9-hPU" secondAttribute="top" constant="20" id="NBi-K5-QdY"/>
-                        <constraint firstAttribute="bottom" secondItem="eAP-yf-ibi" secondAttribute="bottom" constant="20" id="Ubz-IN-3bg"/>
+                        <constraint firstItem="eAP-yf-ibi" firstAttribute="leading" secondItem="7QK-Jx-lcW" secondAttribute="trailing" constant="8" symbolic="YES" id="PNh-Bn-ww3"/>
+                        <constraint firstItem="eAP-yf-ibi" firstAttribute="top" secondItem="zZb-K9-hPU" secondAttribute="top" constant="22" id="RM8-0Q-pkX"/>
                         <constraint firstItem="7QK-Jx-lcW" firstAttribute="leading" secondItem="zZb-K9-hPU" secondAttribute="leading" constant="16" id="oyO-2g-ivv"/>
-                        <constraint firstItem="eAP-yf-ibi" firstAttribute="leading" secondItem="zZb-K9-hPU" secondAttribute="leading" constant="16" id="zJp-yq-Uxr"/>
+                        <constraint firstAttribute="bottom" secondItem="eAP-yf-ibi" secondAttribute="bottom" constant="22" id="yk8-ba-IhX"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Rvl-Gt-mCm">
-                    <rect key="frame" x="0.0" y="152" width="414" height="582"/>
+                    <rect key="frame" x="0.0" y="124" width="414" height="610"/>
                     <color key="backgroundColor" name="primaryBackground"/>
                     <inset key="separatorInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
                 </tableView>
@@ -117,14 +117,14 @@
     </objects>
     <resources>
         <image name="iconBackupCheck" width="28" height="24"/>
+        <namedColor name="background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="lrBrownishGrey">
             <color red="0.37299999594688416" green="0.37299999594688416" blue="0.37299999594688416" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="toolbarTintColor">
-            <color red="0.97600001096725464" green="0.97600001096725464" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
