--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/DeleteDuplicatesContacts/Views/DeleteDuplicatesHeader.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/DeleteDuplicatesContacts/Views/DeleteDuplicatesHeader.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -13,11 +13,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DeleteDuplicatesHeader" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="110"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9KO-sP-pmS">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rings" translatesAutoresizingMaskIntoConstraints="NO" id="3p2-nm-OjR">
                             <rect key="frame" x="16" y="20" width="27" height="24"/>
@@ -27,7 +27,7 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2aM-UF-BFX">
-                            <rect key="frame" x="16" y="52" width="382" height="22"/>
+                            <rect key="frame" x="51" y="20" width="355" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -35,19 +35,18 @@
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="2aM-UF-BFX" secondAttribute="bottom" constant="20" id="GlK-xF-e8J"/>
+                        <constraint firstAttribute="trailing" secondItem="2aM-UF-BFX" secondAttribute="trailing" constant="8" id="AhO-oT-OEI"/>
                         <constraint firstItem="3p2-nm-OjR" firstAttribute="top" secondItem="9KO-sP-pmS" secondAttribute="top" constant="20" id="Mah-I8-KQq"/>
-                        <constraint firstAttribute="trailing" secondItem="2aM-UF-BFX" secondAttribute="trailing" constant="16" id="NkQ-JB-yJn"/>
-                        <constraint firstItem="2aM-UF-BFX" firstAttribute="top" secondItem="3p2-nm-OjR" secondAttribute="bottom" constant="8" id="QRJ-Wq-2eS"/>
-                        <constraint firstItem="2aM-UF-BFX" firstAttribute="leading" secondItem="9KO-sP-pmS" secondAttribute="leading" constant="16" id="SjT-DE-0qr"/>
+                        <constraint firstItem="2aM-UF-BFX" firstAttribute="top" secondItem="9KO-sP-pmS" secondAttribute="top" constant="20" symbolic="YES" id="iSN-8U-ikJ"/>
                         <constraint firstItem="3p2-nm-OjR" firstAttribute="leading" secondItem="9KO-sP-pmS" secondAttribute="leading" constant="16" id="kbU-X4-GcO"/>
+                        <constraint firstItem="2aM-UF-BFX" firstAttribute="leading" secondItem="3p2-nm-OjR" secondAttribute="trailing" constant="8" symbolic="YES" id="qz1-7D-Mgx"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="9KO-sP-pmS" secondAttribute="bottom" constant="16" id="7kc-mh-Oze"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="9KO-sP-pmS" secondAttribute="bottom" id="7kc-mh-Oze"/>
                 <constraint firstItem="9KO-sP-pmS" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="BqQ-43-FuH"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="9KO-sP-pmS" secondAttribute="trailing" id="Ubq-4j-orj"/>
                 <constraint firstItem="9KO-sP-pmS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="yjK-7G-3v3"/>
@@ -55,9 +54,10 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="contentView" destination="9KO-sP-pmS" id="9cP-gO-9Rw"/>
+                <outlet property="imageView" destination="3p2-nm-OjR" id="iBc-pc-ln9"/>
                 <outlet property="titleLabel" destination="2aM-UF-BFX" id="xUu-fS-cr7"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="-133.25892857142856"/>
+            <point key="canvasLocation" x="126.08695652173914" y="-150.66964285714286"/>
         </view>
     </objects>
     <resources>
